# Titanic_MLOps

./: README.md  main.py  notes.md  pyproject.toml
pipelines/: backfill.py  batch_inference.py  daily_feature.py  training.py
src/: config.py  features.py  generate_data.py  hopsworks_client.py
titanic_model/: titanic_model.pkl
