[project]
name = "predict-titanic-survivor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "hopsworks[python]>=4.7.3",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "pydantic-settings>=2.13.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]
